--- a/gb/16/9/19/n8316406.md
+++ b/gb/16/9/19/n8316406.md
@@ -1,26 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/owzxex343/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/owzxex343/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/owzxex343/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/owzxex343/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/owzxex343/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/owzxex343/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/owzxex343/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/owzxex343/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵品牌如雷贯耳 台湾科技城音乐厅大爆满</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191148381750-600x400.jpg" />
 <h6>2016年9月19日晚，神韵交响乐团在台湾科技城新竹县立演艺厅内，再次以门票早已完售，许多贵宾仍在电询抢票的氛围中，爆满开场。图为指挥米兰?纳切夫带领音乐家们谢谢满场观众的热烈掌声。（李贤珍／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2016年09月19日讯】（大纪元台湾新竹记者站报导）“现场才能体验这样的感动！”首度莅临台湾，在桃园中坜艺术馆首演就获得雷动掌声，谢幕达九次之多的<ahref="https://github.com/owzxex343/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>交响乐团，第二场演出于2016年9月19日晚在台湾科技城新竹县文化局演艺厅内，再次以门票早已完售、许多贵宾仍在电询抢票的氛围中爆满开场！</p>
-<p>2009年，被称为“台湾硅谷”、“风城”的新竹市，就曾以观众席的爆满，为<ahref="https://github.com/owzxex343/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术团绝善精妙的演出喝采。新竹科学园区“晶圆双雄”之一的联电荣誉董事长曹兴诚也曾于神韵晚会后赞美神韵声乐，其所唱出的失传古典正统高音唱法，歌词神圣，犹如圣诗。</p>
-<p>“真的是感动、震撼，相信今天在场所有观众都有同感！”民进党立法院总召、立法委员柯建铭盛赞，“光听《高山青》的高低起伏，这么震撼！这是国际级乐团在演奏《高山青》，这是荣耀！”“政治人物应该接触音乐，<ahref="https://github.com/owzxex343/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90%E5%9B%A2.md#1">神韵交响乐团</a>第一次来台湾，当然要来听听，可以抒解压力。”</p>
-<figure id="attachment_8316595" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/09/1609191139161750.jpg"><img class="size-large wp-image-8316595" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191139161750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/owzxex343/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90%E5%9B%A2.md#1">神韵交响乐团</a>于2016年9月19日晚间首度莅临新竹县演出，图为小提琴演奏家郑媛慧独奏。（李贤珍／大纪元）</figcaption></figure>
-<figure id="attachment_8316688" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/09/1609191144191750.jpg"><img class="size-large wp-image-8316688" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191144191750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2016年9月19日晚上，神韵交响乐团首次在新竹县立演艺厅演出，图为男高音歌唱家天歌演唱。 （李贤珍／大纪元）</figcaption></figure>
-<figure id="attachment_8316602" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/09/1609191136381750.jpg"><img class="size-large wp-image-8316602" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191136381750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">神韵交响乐团于2016年9月19日晚间在新竹县文化局演艺厅演出，带给科技城观众一个难忘的夜晚。（李贤珍／大纪元）</figcaption></figure>
-<figure id="attachment_8316604" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/09/1609191155221750.jpg"><img class="size-large wp-image-8316604" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191155221750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2016年9月19日晚，神韵交响乐团在新竹县文化局演艺厅内演出，女高音耿皓蓝的歌声感动了观众。（李贤珍／大纪元）</figcaption></figure>
-<figure id="attachment_8316654" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/09/1609191336001750.jpg"><img class="size-large wp-image-8316654" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191336001750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">神韵交响乐团于2016年9月19日晚间在新竹县文化局演艺厅演出，带给科技城观众一个难忘的夜晚。（李贤珍／大纪元）</figcaption></figure>
-<figure id="attachment_8316653" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/09/1609191346411750.jpg"><img class="size-large wp-image-8316653" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191346411750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">神韵交响乐团于2016年9月19日晚间在新竹县文化局演艺厅演出，带给科技城观众一个难忘的夜晚。（李贤珍／大纪元）</figcaption></figure>
+	<p>【大纪元2016年09月19日讯】（大纪元台湾新竹记者站报导）“现场才能体验这样的感动！”首度莅临台湾，在桃园中坜艺术馆首演就获得雷动掌声，谢幕达九次之多的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>交响乐团，第二场演出于2016年9月19日晚在台湾科技城新竹县文化局演艺厅内，再次以门票早已完售、许多贵宾仍在电询抢票的氛围中爆满开场！</p>
+<p>2009年，被称为“台湾硅谷”、“风城”的新竹市，就曾以观众席的爆满，为<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术团绝善精妙的演出喝采。新竹科学园区“晶圆双雄”之一的联电荣誉董事长曹兴诚也曾于神韵晚会后赞美神韵声乐，其所唱出的失传古典正统高音唱法，歌词神圣，犹如圣诗。</p>
+<p>“真的是感动、震撼，相信今天在场所有观众都有同感！”民进党立法院总召、立法委员柯建铭盛赞，“光听《高山青》的高低起伏，这么震撼！这是国际级乐团在演奏《高山青》，这是荣耀！”“政治人物应该接触音乐，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90%E5%9B%A2.md#1">神韵交响乐团</a>第一次来台湾，当然要来听听，可以抒解压力。”</p>
+<figure id="attachment_8316602" aria-describedby="caption-attachment-8316602" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/09/1609191136381750.jpg"><img class="size-large wp-image-8316602" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191136381750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-8316602" class="wp-caption-text"><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90%E5%9B%A2.md#1">神韵交响乐团</a>于2016年9月19日晚间在新竹县文化局演艺厅演出，带给科技城观众一个难忘的夜晚。（李贤珍／大纪元）</figcaption></figure>
+<figure id="attachment_8316604" aria-describedby="caption-attachment-8316604" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/09/1609191155221750.jpg"><img class="size-large wp-image-8316604" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191155221750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-8316604" class="wp-caption-text">2016年9月19日晚，神韵交响乐团在新竹县文化局演艺厅内演出，女高音耿皓蓝的歌声感动了观众。（李贤珍／大纪元）</figcaption></figure>
+<figure id="attachment_8316654" aria-describedby="caption-attachment-8316654" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/09/1609191336001750.jpg"><img class="size-large wp-image-8316654" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191336001750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-8316654" class="wp-caption-text">神韵交响乐团于2016年9月19日晚间在新竹县文化局演艺厅演出，带给科技城观众一个难忘的夜晚。（李贤珍／大纪元）</figcaption></figure>
+<figure id="attachment_8316653" aria-describedby="caption-attachment-8316653" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/09/1609191346411750.jpg"><img class="size-large wp-image-8316653" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191346411750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-8316653" class="wp-caption-text">神韵交响乐团于2016年9月19日晚间在新竹县文化局演艺厅演出，带给科技城观众一个难忘的夜晚。（李贤珍／大纪元）</figcaption></figure>
 <p><strong>“指挥与音乐家们&#8230;用心投入的演奏画面本身就是一篇乐章”</strong></p>
 <p>于2000年开馆、以音乐演出功能为主，并可与观众直接互动的新竹县文化局演艺厅，是科技城主要的休憩场所，可容纳约一千名观众。暌违多年，今晚演艺厅大厅内名流雅士、商贾如云，风城地方政要包括新竹市长林智坚、立法委员林为洲、民进党立法院党团总召柯建铭、新竹市议会议长谢文进等，都以花篮致贺神韵音乐会，各赞助单位共襄盛举，期待交响乐团的大乐开篇，敲响金锣！</p>
-<figure id="attachment_8317078" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/09/1609191225071750.jpg"><img class="size-large wp-image-8317078" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191225071750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">新竹市长林智坚致赠花篮祝贺神韵交响乐团首度在新竹演出。（李贤珍／大纪元）</figcaption></figure>
-<figure id="attachment_8317079" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/09/1609191224311750.jpg"><img class="size-large wp-image-8317079" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191224311750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">政要祝贺神韵交响乐团首度在新竹演出图为民进党团总召柯建铭致赠花篮。（李贤珍／大纪元）</figcaption></figure>
-<figure id="attachment_8317080" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/09/1609191224551750.jpg"><img class="size-large wp-image-8317080" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191224551750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">立委林为洲致赠花篮祝贺神韵交响乐团首度在新竹演出。（李贤珍／大纪元）</figcaption></figure>
-<figure id="attachment_8317082" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/09/1609191224441750.jpg"><img class="size-large wp-image-8317082" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191224441750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">政要祝贺神韵交响乐团首度在新竹演出，图为新竹市议长谢文进致赠花篮。（李贤珍／大纪元）</figcaption></figure>
+<figure id="attachment_8317078" aria-describedby="caption-attachment-8317078" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/09/1609191225071750.jpg"><img class="size-large wp-image-8317078" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191225071750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-8317078" class="wp-caption-text">新竹市长林智坚致赠花篮祝贺神韵交响乐团首度在新竹演出。（李贤珍／大纪元）</figcaption></figure>
+<figure id="attachment_8317079" aria-describedby="caption-attachment-8317079" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/09/1609191224311750.jpg"><img class="size-large wp-image-8317079" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191224311750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-8317079" class="wp-caption-text">政要祝贺神韵交响乐团首度在新竹演出图为民进党团总召柯建铭致赠花篮。（李贤珍／大纪元）</figcaption></figure>
+<figure id="attachment_8317080" aria-describedby="caption-attachment-8317080" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/09/1609191224551750.jpg"><img class="size-large wp-image-8317080" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191224551750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-8317080" class="wp-caption-text">立委林为洲致赠花篮祝贺神韵交响乐团首度在新竹演出。（李贤珍／大纪元）</figcaption></figure>
+<figure id="attachment_8317082" aria-describedby="caption-attachment-8317082" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/09/1609191224441750.jpg"><img class="size-large wp-image-8317082" title="" src="https://i.epochtimes.com/assets/uploads/2016/09/1609191224441750-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-8317082" class="wp-caption-text">政要祝贺神韵交响乐团首度在新竹演出，图为新竹市议长谢文进致赠花篮。（李贤珍／大纪元）</figcaption></figure>
 <p>新竹市议员陈启源表示，“神韵已是耳熟能详，如此高水准的音乐会，今天能来聆赏很是荣幸！”</p>
 <p>“真的是耳目一新！”苗栗县生命线协会理事长陈宗圣，一脸开怀说道，“这么多的观众来听，心情感到很舒缓、很沉静。”</p>
 <p>他接着表示，“而且就算没有音乐，光看舞台上指挥与音乐家们合而为一，他们那种用心投入的演奏画面，这本身就是一篇乐章！”</p>
@@ -50,44 +48,42 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/16/9/13/n8295625.md#1">神韵交响乐团首抵日本 开启亚洲巡演</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/16/9/14/n8298813.md#1">神韵交响乐团将莅临台湾 24位地方政要迎贺</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/16/9/15/n8303531.md#1">神韵交响乐日本首演 观众着迷意犹未尽</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/16/9/16/n8307662.md#1">神韵交响乐团抵台 粉丝热情接机</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/16/9/17/n8309884.md#1">神韵交响乐台首场大爆满 9次谢幕 欢声雷动</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/19/n12561260.md#1">美售台无人机 国军：与中科院无人机交替搭配</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/9/13/n8295625.md#1">神韵交响乐团首抵日本 开启亚洲巡演</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/9/14/n8298813.md#1">神韵交响乐团将莅临台湾 24位地方政要迎贺</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/9/15/n8303531.md#1">神韵交响乐日本首演 观众着迷意犹未尽</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/9/16/n8307662.md#1">神韵交响乐团抵台 粉丝热情接机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/9/17/n8309884.md#1">神韵交响乐台首场大爆满 9次谢幕 欢声雷动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042647.md#1" target="_blank">林辉：咏春拳文革遭遇是武林劫难的缩影</a></li><li><a href="https://github.com/owzxex343/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/11/n11105711.md#1" target="_blank">内蒙那达慕大会的无敌手 劫后遇佛缘</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/4/n11843021.md#1">武汉瘟疫治寻根  历史天象醒今人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/18/n11461393.md#1" target="_blank">“中共是所有人噩梦”美智库主席吁解体中共</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/11/n12542479.md#1">前世五人是同修 今生唯一人受冻挨饿</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12556457.md#1">从《狮子王》经典台词 看天选之王的成长</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/18/n12559639.md#1">【远见快评】川普“三线”并进战略详解</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/5/n12528186.md#1">【思想领袖】章家敦：美国危险 需击退中共</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/19/n12560349.md#1">【西岸观察】CIA FBI CISA 谁在阻挡川普连任？</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/16/n12554489.md#1">【新闻看点】拜登舞弊证据在握 川普拟大翻盘</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12556437.md#1">国会议员：川普将获胜 使选票得到正确统计</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12556049.md#1">嘉义女子一次拔20颗牙 隔天昏迷 抢救不治</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/16/n12554448.md#1">“八路军”住别墅抹发胶 中共抗日剧太雷人</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12554623.md#1">陪孙俪选窗帘意见遭否定 邓超反问获网友趣答</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12556222.md#1">珉豪军中回忆有TWICE的歌 感谢女团给士兵力量</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12556732.md#1">林青霞生日出新书 帖文证实与富商丈夫情未变</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/18/n12559155.md#1">孙俪晒六岁女儿毛笔字 小花版千字文字体工整</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/17/n12555428.md#1">甘肃男子带“老虎”逛街 路人回头率100%</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/13/n12547278.md#1">还在到处发名片？不要让自己成为人脉怪兽</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/11/n12542173.md#1">常喝1种饮料大脑老4岁 这些习惯让脑部老得快</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/18/n12557834.md#1">【美食天堂】4种方法长久保存姜～几个月都新鲜！</a></li>
-<li><a href="https://github.com/owzxex343/djy/blob/master/gb/20/11/18/n12557985.md#1">45亿年历史陨石砸破屋顶 印尼男子变大富翁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/owzxex343/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/owzxex343/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/19/n8316406.htm">神韵品牌如雷贯耳 台湾科技城音乐厅大爆满</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/19/n8316406.htm">神韵品牌如雷贯耳 台湾科技城音乐厅大爆满</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/owzxex343/djy/blob/master/gb/16/9/19/n8316406.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/owzxex343/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/owzxex343/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/owzxex343/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/owzxex343/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owzxex343/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/9/19/n8316406.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
